[project]
name = "quant-portfolio-work"
version = "0.1.0"
description = "Quant portfilio simulation"
authors = [
    {name = "Aaron Amankwaah"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance (>=0.2.63,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
